fixed hover text and overflowing issue

--- a/src/styles/Tracks.module.css
+++ b/src/styles/Tracks.module.css
@@ -361,7 +361,7 @@
 
 .text3 {
     display: flex;
-    width: 818px;
+    width: 80%;
     height: 104px;
     flex-direction: column;
     justify-content: center;
@@ -524,6 +524,20 @@
         width: 35px; /* Further adjust button size for very small screens */
         height: 35px; /* Further adjust button size for very small screens */
     }
+
+    .button1:hover::after,
+    .button1:hover::before,
+    .button2:hover::after,
+    .button2:hover::before,
+    .button3:hover::after,
+    .button3:hover::before,
+    .button4:hover::after,
+    .button4:hover::before,
+    .button5:hover::after,
+    .button5:hover::before {
+        display: none !important;
+    }
+
 
     .removebgPreview {
         width: 50px; /* Scale down the preview for smaller screens */
